FILE(GLOB sources src/*.c)
add_executable(nFrames ${sources})
target_include_directories(nFrames PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include)
if(${CMAKE_HOST_APPLE})
	target_link_libraries(nFrames CM30 -lexpat -ludunits2 -lm)
else(${CMAKE_HOST_APPLE})
	target_link_libraries(nFrames CM30 -lexpat -ludunits2 -lm -pthread)
endif(${CMAKE_HOST_APPLE})
